--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <ul>
         <li><a href="https://allan99999.github.io/notionwidgets/poscalc.html">Position Calculator</a></li>
         <li><a href="https://allan99999.github.io/notionwidgets/markets.html">Market Overview</a></li>
+        <li><a href="https://allan99999.github.io/notionwidgets/sentiment.html">Market Sentiment</a></li>
+        <li><a href="https://allan99999.github.io/notionwidgets/news.html">Upcoming Financial News</a></li>
     </ul>
 </body>
 </html>
