--- a/positioncalc.html
+++ b/positioncalc.html
@@ -70,7 +70,7 @@
     <div class="container">
         
         <div class="form-group">
-            <label for="stopLoss">Stop Loss:</label>
+            <label for="stopLoss">Stop Loss (Pips):</label>
             <input type="number" id="stopLoss" required>
         </div>
 
@@ -85,7 +85,7 @@
         </div>
 
         <div class="form-group">
-            <label for="pipValue">Pip Value:</label>
+            <label for="pipValue">Pip Value $:</label>
             <input type="number" id="pipValue" value="10" required>
         </div>
 
